--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <h1 class="title">Earthquakes himalayas iceland 50 years</h1>
     <div id="details">
       <div id="legend">
-        Major earthquakes in himalayas and iceland 50 years. In this visualization, small yellow
+        Major earthquakes in himalayas and iceland 50 years. The original visualization was created by Raluca Nicola. In this visualization, small yellow
         spheres (
         <div class="small-circle"></div>
         ) are earthquakes with magnitudes between 4 and 6. Large red spheres (
         <div class="big-circle"></div>
         ) are earthquakes with a magnitude higher than 7. In between, the color and size of spheres are interpolated.
-        Earthquake depth is exaggerated by a factor of 6. The orange lines (
+        Earthquake depth is exaggerated by a factor of 3, not a factor of 6 found in original visualization. The orange lines (
         <div class="orange-line"></div>
         ) represent the boundaries of the tectonic plates. Earthquake data from
         <a href="https://earthquake.usgs.gov/earthquakes/search/">USGS</a>.
