--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Earthquakes himalayas iceland 50 years</title>
+    <title>Earthquakes under Himalayas and Iceland since 1973</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,10 +12,10 @@
   </head>
   <body>
     <div id="view-container"></div>
-    <h1 class="title">Earthquakes himalayas iceland 50 years</h1>
+    <h1 class="title">Earthquakes Himalayas and Iceland</h1>
     <div id="details">
       <div id="legend">
-        Major earthquakes in himalayas and iceland 50 years. The original visualization was created by Raluca Nicola. In this visualization, small yellow
+        Major earthquakes in Himalayas and Iceland since 1973. The original visualization was created by Raluca Nicola. In this visualization, small yellow
         spheres (
         <div class="small-circle"></div>
         ) are earthquakes with magnitudes between 4 and 6. Large red spheres (
@@ -40,6 +40,8 @@
         higher than 7 in chronological order.
       </p>
       <div id="earthquake-list"></div>
+      <a href="https://www.emailmeform.com/builder/form/22Pl636B0cL" style="color:DodgerBlue;">Earthquake viz Contact Form</a>  
+    <i>    Webpage last updated on 19 Sept 2021  </i>
     </div>
   </body>
 </html>
